Attempt to fix videos page from being shifted to the left

--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,6 @@ h1 {
     margin-bottom: 0;
 }
 
-h2 {
-    color: white;
-    margin: auto;
-    font-family: "Roboto Mono", monospace;
-    font-size: 100px;
-    text-align: center;
-    font-style: italic;
-}
-
 p {
     color: white;
     font-family: "Roboto Mono", monospace;
@@ -40,14 +31,11 @@ a {
     padding: 50px;
 }
 
-img {
-    float: left;
-    height: 50px;
-}
-
 iframe {
     margin-top: -0.5em;
     margin-bottom: 1.5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .topnav {
@@ -55,7 +43,7 @@ iframe {
     margin-right: auto;
     margin-top: 5px;
     margin-bottom: 0;
-    width: 100%;
+    width: auto;
 }
 
 .topnav-centered {
